# neo-search-launcher-seelen

./: .gitignore  README.md  app.js  index.html  main.js  neo-search-launcher.yaml  package-lock.json  package.json  preload.js  renderer.js  style.css
Seelen widget/: neo-search-widget.json
src/: app.js  index.html  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
